fixed most linter warnings in branch handling logic